[workspace]
members = ["crates/*", "generator", "xtask"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.88"
version = "0.39.0+sdk1.4.131"

[workspace.dependencies]
log = { default-features = false, version = "0.4.22" }
rstest = "0.26.1"
strum = { version = "0.27.1", features = ["derive"] }
tracel-xtask = { version = "=2.1.11" }
